# infochem-review-generator

./: .env.example  .gitignore  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml
module_1_downloader/: CHECKLIST_module1.md  pyproject.toml
module_1_downloader/research/: memo_module1_bobchenok.md  step1_single_query.py  step1b_look_items.py  step2_filters.py  step3_extract_metadata.py  step4_relevance_cutoff.py  step5_rows_sweep.py  step6_adaptive_n.py  step7_noise_floor.py
module_1_downloader/src/downloader/: crossref_search.py  scihub_downloader.py
module_1_downloader/tests/: test_crossref_search.py  test_scihub_downloader.py
module_2_parser_db/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
module_2_parser_db/src/parser_db/: broker.py  chunker.py  config.py  embedder.py  equations.py  extractor.py  main.py  preprocessor.py  schemas.py  shemas.py  store.py  worker.py
module_2_parser_db/tests/: test_api.py  test_parser.py  test_preprocessor.py
module_3_agents/: main.py  pyproject.toml
scripts/: check.sh
